2009-09-02  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-94
	* man/*.Rd: remove unnecessarily anchored links, including several
	incorrect ones.

2009-08-16  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-93
	* R/lmList.R, tests/lmList.R: bug fix for predict.lmList (PR#13788)
	* R/gls.R, tests/anova.gls.R: bug fix for anova.gls (PR#13567)

2009-05-30  Brian Ripley <Brian.Ripley@R-project.org>

	* R/gnls.R, R/corStruct.Rd: minor message wording changes from
	Debian 'bug' report.
	* R/R-de.po: add

	[ Missing entries for 3.1-9[12] which were concerned with German
	translations. ]

2009-01-16  Brian Ripley <Brian.Ripley@R-project.org>

	* man/*.Rd: expand tabs

2008-12-30  Brian Ripley <Brian.Ripley@R-project.org>

	* man/summary.pdMat.Rd: avoid embedded newlines in \code strings.

2008-12-27  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-90
	* R/gls.R: call dist correctly (PR#13418)

2008-12-19  Brian Ripley <Brian.Ripley@R-project.org>

	* man/*.Rd: clean up some reference formats and misuse of $...$.

2008-12-11  Brian Ripley <Brian.Ripley@R-project.org>

	* man/*.Rd: spelling
	* src/nlOptimizer.c: missing PROTECT

2008-06-07  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-89
	* R/lme.R: fitted.lme() always dropped, when it should drop for
	one column but not for one row.
	* tests/lme.R, lme.Rout.save: add regression test for
	single-row predictions.

2008-04-10  Brian Ripley <Brian.Ripley@R-project.org>

	* R/zzMethods.R: add .onUnload() to unload the DLL.

2008-03-30  Brian Ripley <Brian.Ripley@R-project.org>

	* DESCRIPTION (Version, Date): 3.1-88

2008-02-19  Brian Ripley <Brian.Ripley@R-project.org>

	* man/logLik.lme.Rd, man/logLik.gnls.Rd: correct description of
	'REML' argument.

2008-02-19  Brian Ripley <Brian.Ripley@R-project.org>

	* inst/CITATION: add file (essentially what citation() would
	produce, without the warning).
